# modules/auth/auth_api.go
@@ -4,10 +4,7 @@ import (
 	"net/http"
 	"user_management/common"
 	"user_management/components/appctx"
-	"user_management/components/hasher"
 	authmodel "user_management/modules/auth/model"
-	jwtauthprovider "user_management/modules/auth_providers/jwt"
-	"user_management/modules/user"
 	usermodel "user_management/modules/user/model"
 
 	"github.com/gin-gonic/gin"
@@ -20,7 +17,7 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        user  body      authmodel.AuthRegister      true  "register"
-// @Success      200   {object}  common.Response{data=bool}  "desc"
+// @Success      200   {object}  common.Response{data=int}  "desc"
 // @Failure      400   {object}  common.AppError
 // @Router       /api/v1/auth/register [post]
 func RegisterUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
@@ -31,26 +28,20 @@ func RegisterUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
 			panic(common.ErrorInvalidRequest(usermodel.EntityName, err))
 		}
 
-		validate := appCtx.GetValidator()
-		if err := validate.Struct(&newData); err != nil {
+		validator := appCtx.GetValidator()
+		if err := validator.Struct(&newData); err != nil {
 			panic(common.ErrorInvalidRequest(usermodel.EntityName, err))
 		}
 
-		appConfig := appCtx.GetConfig()
-		userRepo := user.NewUserRepository(appCtx.GetMainDBConnection())
-		esService := appCtx.GetESService()
-		hashService := hasher.NewHashService()
-		userService := user.NewUserService(userRepo, esService)
-		jwtProvider := jwtauthprovider.NewJWTProvider(appCtx.GetConfig().JWT.Secret)
-		authService := NewAuthService(jwtProvider, userService, hashService, appConfig)
+		authService := NewAuthServiceFromContext(appCtx)
 
-		err := authService.Register(ginCtx.Request.Context(), &newData)
+		userId, err := authService.Register(ginCtx.Request.Context(), &newData)
 
 		if err != nil {
 			panic(err)
 		}
 
-		ginCtx.JSON(http.StatusOK, common.SuccessResponse(true))
+		ginCtx.JSON(http.StatusOK, common.SuccessResponse(userId))
 	}
 }
 
@@ -72,18 +63,12 @@ func LoginUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
 			panic(common.ErrorInvalidRequest(usermodel.EntityName, err))
 		}
 
-		validate := appCtx.GetValidator()
-		if err := validate.Struct(&loginData); err != nil {
+		validator := appCtx.GetValidator()
+		if err := validator.Struct(&loginData); err != nil {
 			panic(common.ErrorInvalidRequest(usermodel.EntityName, err))
 		}
 
-		appConfig := appCtx.GetConfig()
-		userRepo := user.NewUserRepository(appCtx.GetMainDBConnection())
-		esService := appCtx.GetESService()
-		userService := user.NewUserService(userRepo, esService)
-		hashService := hasher.NewHashService()
-		jwtProvider := jwtauthprovider.NewJWTProvider(appConfig.JWT.Secret)
-		authService := NewAuthService(jwtProvider, userService, hashService, appConfig)
+		authService := NewAuthServiceFromContext(appCtx)
 
 		token, err := authService.Login(ginCtx.Request.Context(), &loginData)
 
@@ -92,5 +77,101 @@ func LoginUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
 		}
 
 		ginCtx.JSON(http.StatusOK, common.SuccessResponse(token))
+	}
+}
+
+// Logout godoc
+// @Summary      Logout
+// @Description  Logout
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Success      200   {object}  common.Response{data=bool}  "desc"
+// @Failure      400   {object}  common.AppError
+// @Router       /api/v1/auth/logout [post]
+// @securityDefinitions.bearer BearerAuth
+func LogoutUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
+	return func(ginCtx *gin.Context) {
+		currentUser := ginCtx.Value(common.CurrentUser).(usermodel.User)
+
+		authService := NewAuthServiceFromContext(appCtx)
+
+		_, err := authService.Logout(ginCtx.Request.Context(), &currentUser)
+
+		if err != nil {
+			panic(err)
+		}
+
+		ginCtx.JSON(http.StatusOK, common.SuccessResponse(true))
+	}
+}
+
+// ForgotPassword godoc
+// @Summary      ForgotPassword
+// @Description  ForgotPassword
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        user  body      authmodel.AuthForgotPassword                           true  "login"
+// @Success      200   {object}  common.Response{data=bool}  "desc"
+// @Failure      400   {object}  common.AppError
+// @Router       /api/v1/auth/forgot-password [post]
+func ForgotPasswordUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
+	return func(ginCtx *gin.Context) {
+		var forgotPasswordData authmodel.AuthForgotPassword
+
+		if err := ginCtx.ShouldBind(&forgotPasswordData); err != nil {
+			panic(common.ErrorInvalidRequest(authmodel.EntityName, err))
+		}
+
+		validator := appCtx.GetValidator()
+		if err := validator.Struct(&forgotPasswordData); err != nil {
+			panic(common.ErrorInvalidRequest(authmodel.EntityName, err))
+		}
+
+		authService := NewAuthServiceFromContext(appCtx)
+
+		_, err := authService.ForgotPassword(ginCtx.Request.Context(), &forgotPasswordData)
+
+		if err != nil {
+			panic(err)
+		}
+
+		ginCtx.JSON(http.StatusOK, common.SuccessResponse(true))
+	}
+}
+
+// ResetPassword godoc
+// @Summary      ResetPassword
+// @Description  ResetPassword
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        user  body      authmodel.AuthResetPassword                           true  "login"
+// @Success      200   {object}  common.Response{data=bool}  "desc"
+// @Failure      400   {object}  common.AppError
+// @Router       /api/v1/auth/reset-password [post]
+func ResetPasswordUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
+	return func(ginCtx *gin.Context) {
+		var resetPasswordData authmodel.AuthResetPassword
+
+		if err := ginCtx.ShouldBind(&resetPasswordData); err != nil {
+			panic(common.ErrorInvalidRequest(authmodel.EntityName, err))
+		}
+
+		validator := appCtx.GetValidator()
+		if err := validator.Struct(&resetPasswordData); err != nil {
+			panic(common.ErrorInvalidRequest(authmodel.EntityName, err))
+		}
+
+		authService := NewAuthServiceFromContext(appCtx)
+
+		_, err := authService.ResetPassword(ginCtx.Request.Context(), &resetPasswordData)
+
+		if err != nil {
+			panic(err)
+		}
+
+		ginCtx.JSON(http.StatusOK, common.SuccessResponse(true))
 	}
 }
