# modules/auth/model/forgot_password.go
@@ -1,1 +1,5 @@
 package authmodel
+
+type AuthForgotPassword struct {
+	Email string `validate:"required,email" json:"email" gorm:"-"`
+}
